large refactoring, new subpackage structure, Gradle 5.2.1, Java 11